--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -10,15 +10,15 @@ where $\hat{\overline{\rho}}$ is the mean galaxy density estimated directly from
 \begin{equation}\label{eq:nbar}
 \hat{\overline{\rho}} = \frac{\sum_{i}\rho_{i}f_{{\rm pix},i}}{\sum_{i}f_{{\rm pix},i}},
 \end{equation}a
-with the pixel fractional completeness $f_{{\rm pix},i}$ represented by randoms. Then, the density contrast field $\delta_{i}$ is expanded into spherical harmonics $Y_{\ell m}$, 
+with the pixel fractional completeness $f_{{\rm pix},i}$ represented by randoms. Next, the density contrast field $\delta_{i}$ is expanded into spherical harmonics $Y_{\ell m}$, 
 \begin{equation}
-        \hat{a}_{\ell m} = \int d\Omega ~ \delta f_{\rm pix} Y^{*}_{\ell m},
+        \hat{a}_{\ell m} = \int d\Omega ~ \delta f_{\rm pix} Y^{*}_{\ell m}.
 \end{equation}
-to estimate the angular power spectrum,
+Then, we estimate the angular power spectrum via,
 \begin{equation}\label{eq:pusedocell}
         \hat{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |\hat{a}_{\ell m}|^{2}.
 \end{equation}
-We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum. This estimator is biased for a partial sky coverage, and thus often referred to as the pseudo power spectrum. Because of the survey mask, different harmonic modes are no longer independent and the measured power on scales near the survey size is pushed to zero. These effects impact the galaxy power spectrum on large scales, where the sensitivity to PNG is high. Therefore, correcting for these survey geometry-related effects is crucial for our analysis, and later we will describe how we account for the systematics in the model power spectrum. 
+We also follow a similar approach to construct density contrast fields for imaging properties and cross correlate with the galaxy density map. We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum and cross power spectrum. This power spectrum estimator is biased for a partial sky coverage, and thus often referred to as the pseudo power spectrum. Because of the survey mask, different harmonic modes are no longer independent and the measured power on scales near the survey size is pushed to zero. These effects impact the galaxy power spectrum on large scales, where the sensitivity to PNG is high. Therefore, correcting for these survey geometry-related effects is crucial for our analysis, and later we will describe how our model power spectrum accounts for these effects. 
 
  \subsection{Modeling}
 
@@ -37,7 +37,7 @@ The linear growth factor, $D(z)$, is scaled such that $D(0)=1$, $f(r)$ is the gr
 b(k, z) = b(z) + 3 (b(z) - p) \fnl \frac{\delta_{c} \Omega_{m} H^{2}_{0}}{k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \end{equation}
 where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{Because $k$ is in unit of $h/{\rm Mpc}$, $H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$}, $T(k)$ is the transfer function, $\delta_{c}=1.686$ represents the critical density for spherical collapse \citep{fillmore1984self}, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ \mr{(see, e.g., Mueller et al 2018)}. The parameter $p$ is the correction due to galaxy selection
-beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values \citep[see, e.g.,][]{slosar2008constraints}. The theoretical uncertainty on $p$ is not very well understood, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. Using N-body simulations, \cite{2023JCAP...01..023L} investigated secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of halo occupation function while halo concentration significantly alters the halo function. Without better priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will imply a nonzero detection of $\fnl$. This paper is focused on how a thorough treatment of imaging systematic effects or lack thereof can impact the PNG constraints. Therefore, we choose $p=1$ for our sample of LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals.
+beyond a Poisson sampling of the haloes of a given mass; if only mass determines how galaxies populate a halo, $p=1$, which is often referred to as the universality of the halo occupation distribution. However, numerical simulations indicate that the halo occupation distribution for other tracers, e.g., quasars, which are from recent mergers, could depend on other properties besides mass, and thus $p$ might take different values \citep[see, e.g.,][]{slosar2008constraints}. The theoretical uncertainty on $p$ is not very well understood, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased constraints because of parameter space projection effects. Using N-body simulations, \cite{2023JCAP...01..023L} investigated secondary halo properties such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of halo occupation function while halo concentration significantly alters the halo function. Without better priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $p\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the significance of detection of nonzero PNG is not affected by different assumptions on $p$, i.e., a nonzero detection of $p\fnl$ will still imply a nonzero detection of $\fnl$. This paper is focused on how a thorough treatment of imaging systematic effects or lack thereof can impact the PNG constraints. Therefore, we choose $p=1$ for our sample of LRGs. We use the FFTLog\footnote{\href{https://github.com/xfangcosmo/FFTLog-and-beyond}{github.com/xfangcosmo/FFTLog-and-beyond}} algorithm and its extension as implemented in \cite{fang2020beyond} to handle the Bessel function integrals.
 
  \begin{figure}
 \centering
@@ -63,11 +63,11 @@ Finally, we account for the effect of integral constraint by subtracting the pow
 We validate the pipeline for modeling the angular power spectrum against the lognormal simulations. Fig. \ref{fig:model_mock} shows the log-transformed mean of 1000 spectra from the simulations (dashed) and the best fit theory prediction before and after accounting for survey geometry and integral constraint. light and dark shades represent the 68\% error on the mean and one single realization, respectively. DESI footprint mask is applied to the mocks, and even though DESI covers around $40\%$ of the sky, but the window effect is affecting modes down to $\ell=200$. On the other hand, integral constraint only alters the power in the first two bins.
 
 \subsection{Parameter estimation}
-The signature of local PNG in the two-point function is unique and cannot be reproduced with other standard cosmological parameters. For parameter inference, we use standard Monte-Carlo Markov Chain sampling while allowing three parameters to vary; $\fnl$, shotnoise, and bias. We assume a constant clustering amplitude for our sample of LRGs, $b(z) = b/D(z)$, and fit for b. Throughout this manuscript, we use a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to those with $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints less sensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
+The signature of local PNG in the two-point function is unique and cannot be reproduced with other standard cosmological parameters. For parameter inference, we use standard Monte-Carlo Markov Chain sampling while allowing $\fnl$, shotnoise, and bias to vary. For the bias, we assume a constant clustering amplitude for our sample of LRGs, $b(z) = b/D(z)$, and fit for b. Throughout this manuscript, we use a discrete set of bandpower bins with $\Delta\ell=2$ between $\ell=2$ and $20$ and $\Delta \ell=10$ from $\ell=20$ to $300$, while weighting each mode by $2\ell+1$. We also find that the distribution of power spectrum at the lowest bin, $2\leq \ell < 12$,  is not Gaussian and its standard deviation varies significantly from mocks with $\fnl=0$ to those with $76.9$ (see, Fig. \ref{fig:histcell}). Therefore, we attempt to fit $\log C_{\ell}$ to make our constraints less sensitive to the choice of covariance matrix. The parameter $\fnl$ is constrained by maximizing a posterior defined as,
 \begin{equation}
 -2\ln\mathcal{L} = (\log C(\Theta)-\log \hat{C})^{\dagger} \mathbb{C}^{-1} (\log C(\Theta)-\log \hat{C}) + \chi^{2}_{\rm priors},
 \end{equation}
-where $\Theta$ represents the parameters, $\fnl$, bias coefficient, and shotnoise, all of which are associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations. 
+where $\Theta$ represents the parameters, $\fnl$, bias coefficient, and shotnoise, all of which are associated with a flat prior, $\chi^{2}_{\rm priors}$; $C(\Theta)$ is the (binned) theoretical power spectrum including the effects for survey geometry and integral constraint; $\hat{C}$ is the (binned) measured power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from simulations and corrected for the effect with Hartlap \mr{CITE}. 
 
 \begin{figure}
 \centering
@@ -79,8 +79,7 @@ where $\Theta$ represents the parameters, $\fnl$, bias coefficient, and shotnois
 \subsection{Remaining systematic errors}
 \label{ssec:characterization}
 
-
-We use the diagnostic tests first applied to SDSS data in \cite{rezaie2021primordial} based on cross power spectrum between galaxy density field and imaging maps and mean density contrast as a function of imaging properties to quantify the significance of imaging systematic effects. 
+In the absence of systematic effects, a) the mean density of galaxies should be uniform within the statistical fluctuations regardless of the imaging condition and b) the cross power spectrum between the galaxy density and imaging properties should be consistent with zero with statistical fluctuations. With these priors, we apply two statistical tests to look for remaining systematic effects in our sample of LRGs.
 
 \begin{figure*}
 \centering
@@ -102,36 +101,32 @@ We use the diagnostic tests first applied to SDSS data in \cite{rezaie2021primor
 \caption{Remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DR9 sample before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
 \end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.5\textwidth]{chi2lmax.pdf}
-\caption{Cross power spectrum $\chi^{2}$ as a function of the highest mode $\ell_{\rm max}$ for the DR9 LRG sample using the linear and nonlinear imaging weights with the conservative II maps. The lowest mode is fixed at $\ell_{\rm min}=2$. Solid curve and dark (light) shade represent the median estimate and $68\%$ ($95\%$) confidence constructed from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
-\end{figure}
-
 
 \subsubsection{Cross power spectrum}
-Taking $C^{g,x}_{\ell}$ as the cross power spectrum between galaxy density contrast field and imaging map, one can normalize this quantity by auto power spectrum of imaging map itself:
+We calculate the cross power spectra between galaxy density contrast field and imaging maps,
 \begin{equation}
-\hat{C}_{x, \ell} = \frac{(\hat{C}^{g,x}_{\ell})^{2}}{\hat{C}^{x,x}_{\ell}},
+\hat{C}_{X, \ell} = [\hat{C}_{x_{1}, \ell}, \hat{C}_{x_{2}, \ell}, \hat{C}_{x_{3}, \ell}, ..., \hat{C}_{x_{9}, \ell}],
 \end{equation}
-and then construct a vector from cross spectra against all other imaging maps:
+where $C_{x_{i}, \ell}$ represents the cross power spectrum between the galaxy density and $i^{\rm th}$ imaging map, normalized by the auto power spectrum of $x_{i}$:
 \begin{equation}
-\hat{C}_{X, \ell} = [\hat{C}_{x_{1}, \ell}, \hat{C}_{x_{2}, \ell}, \hat{C}_{x_{3}, \ell}, ..., \hat{C}_{x_{9}, \ell}].
+\hat{C}_{x_{i}, \ell} = \frac{(\hat{C}_{gx_{i}, \ell})^{2}}{\hat{C}_{x_{i}x_{i},\ell}}.
 \end{equation}
-Finally, cross power spectrum $\chi^{2}$ can be defined as,
+Then, the $\chi^{2}$ value for the cross power spectra is calculated via,
 \begin{equation}
-\chi^{2} = C^{T}_{X, \ell} \mathbb{C}_{X}^{-1} C_{X, \ell},
+\chi^{2} = \hat{C}^{T}_{X, \ell} \mathbb{C}_{X}^{-1} \hat{C}_{X, \ell},
 \end{equation}
-where covariance matrix $\mathbb{C}_{X} = < C_{X, \ell} C_{X, \ell'} >$ is constructed from mocks without systematic effects. This statistics is measured for every mock realization with the leave-one-out technique to construct a histogram, which is then compared to the $\chi^{2}$ value observed from the DR9.  Fig. \ref{fig:clxmock} (top) shows the measured $C_{X}$ the DR9 sample before and after applying various imaging weights, relative to that of the mocks with $\fnl=0$. The dispersions of mocks with and without PNG are shown with the shade regions for comparison. We bin the $C_{X}$ measurements from $\ell=2$ to $20$ with $\Delta\ell=2$. The mean and standard deviation of $\hat{C}_{X, \ell}$ for 1000 mocks with and without $\fnl$ are shown in Fig. \ref{fig:clxmock}.  Extinction and stellar density have the highest cross power spectrum, and then depth in the z band. After applying the first version of weights with linear conservative I which includes extinction and depth-z, the cross power increases against psftsize in the r band. This indicates that only two maps are not sufficient to null out all of the cross correlations. With linear model there is residual power against extinction, depth-z, and psfsize-z; therefore, we apply weights based on a nonlinear model to account for more complex systematic effects. 
+where the covariance matrix $\mathbb{C}_{X} = < \hat{C}_{X, \ell} \hat{C}_{X, \ell'} >$ is constructed from the lognormal mocks. This $\chi^{2}$ statistics is measured for every mock realization with the \textit{leave-one-out} technique\footnote{999 realizations are used to estimate the covariance matrix and applied to measure the $\chi^{2}$ for the left-out realization.}, and then is compared to the $\chi^{2}$ value observed from the DR9. We only use the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, although higher modes are included for a robustness test later. 
 
-Fig. \ref{fig:chi2test} (top) shows the histogram of cross spectrum $\chi^{2}$ from mocks with and without $\fnl$. Comparing with the data, the residual is 20014.8 before correction, and after applying the first set of weights, it reduces to 375.1 with p-value \mr{XXX}. Adding psfsize-z, the linear model reduces the error dow to 195.9 (\mr{p-value = XXX}). Although using all maps gives the lowest error i.e., 129.2, but it could potentially lead to over-fitting true clustering given how correlated the imaging maps are (see, Fig. \ref{fig:pcc}). On the other hand, the nonlinear method with three maps yields a $\chi^{2}$ value of 79.3 and p-value of XXX, and adding the stellar density map reduces the error to 70.9 (p-value=XXX). This test clearly shows that a nonlinear approach is desired to get a null test. We further test the stability of our results by extending the highest mode from $\ell=20$ to $100$, or fluctuations over scales as small as $1.8$ degrees (see, Fig. \ref{fig:chi2cellextend}). The solid line shows how the median of 1000 mocks changes as the highest $\ell$ increases from $20$ to $100$. The red circles show the chi2 for the linear approach with three maps and the blue crosses show the chi2 for the nonlinear approach with three maps.
+Fig. \ref{fig:clxmock} shows the measured $C_{X}$ from the DR9 sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. The LRG sample has the highest cross correlation against the extinction, stellar density, and the z-band depth (solid black curve). As the most conservative cleaning approach, a linear model is trained with the extinction and z-band depth (\textit{linear conservative I}). With the correction applied, we find that the cross power spectrum against the r-band psftsize increases (dot-dashed blue curve), which indicates that only the extinction and the z-band depth are not sufficient to regress out all of the residual cross correlations between the LRG density and imaging. With the linear model re-trained using the three maps (\textit{linear conservative II}), we are able to reduce the cross power spectra (dotted orange curve). For comparison, we also show the cross spectra for a case in which the DR9 is cleaned using the linear model trained with all imaging maps (dashed red curve). There are minor differences between the \textit{linear conservative II} and \textit{linear all maps} cross spectra, further supporting the idea that only three imaging maps are sufficient to regress out spurious correlations.
+
+Fig. \ref{fig:chi2test} (top) shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 sample are quoted for comparison. Before cleaning, the DR9 sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear conservative I approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear conservative II is properly cleaned at $95\%$ confidence. Although training the linear model with all imaging maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), but it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (see, Fig. \ref{fig:pcc}). As an alternative, we train the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear conservative II}) and clean the DR9 sample. The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). This cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is desired to null out the remaining spurious fluctuations. We investigate cross spectrum to higher multipoles but find no evidence of remaining systematic error (see Appendix \ref{sec:scalesys}). 
 
 \subsubsection{Mean density contrast}
-In the absence of systematic error, the integral of mean density contrast over the footprint should be zero As an alternative test, we calculate the histogram of the density contrast field relative to each imaging map.
+We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property:
 \begin{equation}
-\delta_{x} = ({\hat{\overline{\rho}}})^{-1} \frac{\sum_{i} \rho_{i} f_{{\rm pix}, i}}{\sum_{i} f_{{\rm pix}, i}},
+\delta_{x_{j}} = ({\hat{\overline{\rho}}})^{-1} \frac{\sum_{i} \rho_{i} f_{{\rm pix}, i}}{\sum_{i} f_{{\rm pix}, i}},
 \end{equation}
-where the summations are over pixels in each bin of imaging map $x$. Similarly, we construct the mean density contract vector against all imaging maps,
+where the summations are over \textsc{HEALPix} pixels in the bin with similar imaging values. For instance, In the absence of systematic error, the mean density contrast from one part of the sky with high extinction should be consistent with that from another patch with low extinction. We compute the histograms against all other imaging properties (see Fig. \ref{fig:ng}), and construct the total mean density contract as,
 \begin{equation}
 \delta_{X} = [\delta_{x_{1}}, \delta_{x_{2}}, \delta_{x_{3}}, ..., \delta_{x_{9}}],
 \end{equation}
@@ -139,7 +134,10 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from mocks without systematic effects. Fig. \ref{fig:clxmock} (bottom) shows the mean density contrast for the DR9 LRG sample. The shades represent the $1\sigma$ level fluctuations observed in 1000 clean mocks with $\fnl=0$ and $76.92$. Before treatment (solid) shows strong correlation around $10\%$ against depth in the z band which is consistent with the cross power spectrum. Beside that, there are strong positive trends against extinction and stellar density at about $5-6\%$. The linear model is able to mitigate most of the systematic effects with only the extinction and depth-z maps as input, however a new trend appears against psfsize-r which is indicative of psfsize dependence in the sample. This finding is in agreement with the cross power spectrum. Even after applying the linear weights there is some residual against depth-z at around $2\%$, which indicates the systematic effects might be more complex than what can be removed using a linear model. Nonlinear model with three maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Fig. \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 sample before treatment (solid curve) exhibits strong correlation around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are strong positive spurious trends against the extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations using only the extinction and z-band depth as input maps for regression; however, with the linear conservative I (dot-dashed blue curve) approach, a new trend appears against the r-band psfsize, which is indicative of the psfsize-related systematics in the LRG sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps identified as \textit{conservative II}, but still observe around $2\%$ residual density fluctuations in the low z-band depth region, which implies more complex systematic effects beyond what can be mitigated using the linear approach. Nonlinear model with three maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. 
 
 
 Fig. \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks vs DR9 sample before and after applying imaging weights. Linear weights with two maps reduce the chi-2 value from 679.8 (before) to 178.8. The p-value is indicative of remaining systematic effects. Adding psfsize-r does not help much with the p-value even though it reduces the chi-2 to 130. Using all maps with the linear model gives a more reasonable value however it leaves the analysis susceptible to over-fitting true clustering signal. With nonlinear approach two maps as input, the chi-2 is reasonable 74.3 with p-value XXX, and adding the stellar map does not change the p-value much, indicating the trend against stellar density can be explained with the extinction to a great extend. 
+
+
+\mr{TODO: move mitigation bias here and everything else from the mocks to Appendix}
