--- a/ms.tex
+++ b/ms.tex
@@ -66,8 +66,8 @@ cosmology: inflation - large-scale structure of the Universe
 % references
 \bibliographystyle{mnras}
 \bibliography{refs} 
-%\appendix
-%\include{sections/extra}
+\appendix
+\include{sections/extra}
 
 % % % Don't change these lines
 \bsp	% typesetting comment
