--- a/sections/dataavailability.tex
+++ b/sections/dataavailability.tex
@@ -1,3 +1,3 @@
 \section*{Data Availability}
 \label{sec:dataavail}
-DESI imaging DR9 catalogs are publicly available at \href{https://www.legacysurvey.org/dr9/}{https://www.legacysurvey.org/dr9/}. Software for cleaning imaging data is available at \href{https://github.com/mehdirezaie/sysnetdev}{https://github.com/mehdirezaie/sysnetdev}. Mock catalogs can be made available upon reasonable request.
+The DR9 catalogs from the DESI Legacy Imaging Surveys are publicly available at \href{https://www.legacysurvey.org/dr9/}{https://www.legacysurvey.org/dr9/}. The software and codes used for cleaning the imaging data are available at \href{https://github.com/mehdirezaie/sysnetdev}{https://github.com/mehdirezaie/sysnetdev}. The lognormal mock catalogs can be made available upon reasonable request.
